--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
       <div class="shimmer-card"></div>
       <div class="shimmer-card"></div>
       <div class="shimmer-card"></div>
+      <div class="shimmer-card"></div>
     </div>
 
     <h2>Categories</h2>
     <div class="categories-grid">
-      <a href="products.html?category=keycaps" class="category-button keycaps" style="background-image: url('keycaps.jpg'); background-size: cover; background-position: center;">Keycaps</a>
-      <a href="products.html?category=switches" class="category-button switches" style="background-image: url('switches.jpg'); background-size: cover; background-position: center;">Switches</a>
-      <a href="products.html?category=keyboard-barebones" class="category-button keyboard-barebones" style="background-image: url('keyboards.jpg'); background-size: cover; background-position: center;">Keyboard and Barebones</a>
-      <a href="products.html?category=collectables" class="category-button collectables" style="background-image: url('collectables.jpg'); background-size: cover; background-position: center;">Collectables</a>
+      <a href="products.html?category=keycaps" class="category-button keycaps card" style="background-image: url('keycaps.jpg'); background-size: cover; background-position: center;">Keycaps</a>
+      <a href="products.html?category=switches" class="category-button switches card" style="background-image: url('switches.jpg'); background-size: cover; background-position: center;">Switches</a>
+      <a href="products.html?category=keyboard-barebones" class="category-button keyboard-barebones card" style="background-image: url('keyboards.jpg'); background-size: cover; background-position: center;">Keyboard and Barebones</a>
+      <a href="products.html?category=collectables" class="category-button collectables card" style="background-image: url('collectables.jpg'); background-size: cover; background-position: center;">Collectables</a>
     </div>
   </main>
 
@@ -52,7 +53,7 @@
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
+  <footer class="site-footer">
     <div>
       <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
         <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
