--- a/admin.html
+++ b/admin.html
@@ -1,52 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Panel</title>
-  <link rel="icon" type="image/x-icon" href="logo t.png" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin</title>
+  <link rel="stylesheet" href="style.css">
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+  </script>
   <script type="module" src="script.js"></script>
 </head>
 <body>
-  <main class="admin-container">
-    <h1>Admin Panel</h1>
+  <header class="site-header">
+     <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
+      <div class="nav-links">
+        <a href="products.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
+      </div>
+    </nav>
+  </header>
 
-    <form id="login-form" class="card">
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
+  <main class="container">
+    <div id="login-panel" class="card" style="display: none;">
+      <h2>Admin Login</h2>
+      <form id="login-form" class="form">
+        <div>
+          <label>Email</label>
+          <input id="admin-email" type="email" required>
+        </div>
+        <div>
+          <label>Password</label>
+          <input id="admin-pass" type="password" required>
+        </div>
+        <button type="submit">Login</button>
+      </form>
+    </div>
 
-    <div id="admin-panel" style="display:none;">
-      <button id="logout-btn">Logout</button>
+    <div id="admin-panel" class="card" style="display: none;">
+      <div class="panel-header">
+        <h2>Admin Panel</h2>
+        <button onclick="logoutAdmin()">Logout</button>
+      </div>
 
-      <section id="products-section">
-        <h2>Products</h2>
-        <table>
+      <h2>Add Product</h2>
+      <form id="add-product-form" class="form">
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="add-name" required>
+          </div>
+          <div>
+            <label>Price (tk)</label>
+            <input id="add-price" required>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Discount (tk)</label>
+            <input id="add-discount" value="0">
+          </div>
+          <div>
+            <label>Image URLs (comma separated)</label>
+            <textarea id="add-images" required placeholder="https://...jpg, https://...png"></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Category</label>
+            <select id="add-category" required>
+              <option value="keycaps">Keycaps</option>
+              <option value="switches">Switches</option>
+              <option value="keyboard-barebones">Keyboard and Barebones</option>
+              <option value="collectables">Collectables</option>
+            </select>
+          </div>
+          <div>
+            <label>Color</label>
+            <input id="add-color">
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Stock</label>
+            <input id="add-stock" type="number" value="0">
+          </div>
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
+          </div>
+        </div>
+        <div>
+          <label>Description</label>
+          <textarea id="add-desc"></textarea>
+        </div>
+        <button type="submit">Add Product</button>
+      </form>
+
+      <h2>Products</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
           <thead>
             <tr>
-              <th></th><th>Name</th><th>Price</th><th>Category</th><th>Color</th>
-              <th>Discount</th><th>Stock</th><th>Availability</th><th>Status</th><th>Actions</th>
+              <th></th>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
+              <th>Stock</th>
+              <th>Availability</th>
+              <th>Status</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody id="products-body"></tbody>
         </table>
-      </section>
+      </div>
 
-      <section id="orders-section">
-        <h2>Orders</h2>
-        <table>
+      <h2>Orders</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
           <thead>
             <tr>
-              <th></th><th>Date</th><th>Product</th><th>Color</th><th>Qty</th>
-              <th>Total</th><th>Paid</th><th>Due</th><th>Name</th><th>Phone</th>
-              <th>Address</th><th>Method</th><th>Txn</th><th>Status</th>
+              <th></th>
+              <th>Time</th>
+              <th>Product</th>
+              <th>Color</th>
+              <th>Qty</th>
+              <th>Delivery</th>
+              <th>Paid</th>
+              <th>Due</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Address</th>
+              <th>Payment</th>
+              <th>Txn ID</th>
+              <th>Status</th>
             </tr>
           </thead>
           <tbody id="orders-body"></tbody>
         </table>
-      </section>
+      </div>
     </div>
   </main>
 </body>
