--- a/product.html
+++ b/product.html
@@ -154,7 +154,14 @@
       </form>
     </div>
   </div>
-
+<!-- Success Popup -->
+<div id="success-popup" class="success-popup">
+  <div class="success-content">
+    <h2>Your Order Has Been Placed!</h2>
+    <p>Thank you for your patronage ❤️</p>
+    <button onclick="closeSuccessPopup()" style="padding: 12px 30px; font-size: 18px; background: #22c55e; color: white; border: none; border-radius: 8px; cursor: pointer;">OK</button>
+  </div>
+</div>
   <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
     <div>
       <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
@@ -170,4 +177,5 @@
     <p>&copy; All rights reserved by The Geek Shop</p>
   </footer>
 </body>
+
 </html>
