--- a/product.html
+++ b/product.html
@@ -159,8 +159,9 @@
   <div class="success-content">
     <h2>Your Order Has Been Placed!</h2>
     <p>Thank you for your patronage ❤️</p>
-    <button onclick="closeSuccessPopup()" style="padding: 12px 30px; font-size: 18px; background: #22c55e; color: white; border: none; border-radius: 8px; cursor: pointer;">OK</button>
+    <button id="success-ok-btn" style="padding: 12px 30px; font-size: 18px; background: #22c55e; color: white; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s;">OK</button>
   </div>
+</div>
 </div>
   <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
     <div>
@@ -179,3 +180,4 @@
 </body>
 
 </html>
+
