--- a/product.html
+++ b/product.html
@@ -24,6 +24,7 @@
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
+        <a id="cart-link" href="#">Cart (<span id="cart-count">0</span>)</a>
         <a href="admin.html">Admin</a>
       </div>
     </nav>
@@ -41,7 +42,14 @@
         <div id="product-price" class="price"></div>
         <div id="product-badges" class="badges"></div>
         <p id="product-spec"></p>
-        <div id="order-row" class="order-row"></div>
+        <div id="order-row" class="order-row">
+          <div class="quick-buy-row">
+            <input id="quick-qty" type="number" min="1" value="1" style="width: 60px; padding: 8px;">
+            <button id="quick-buy-btn" class="quick-buy-btn">Quick Buy</button>
+            <button id="add-to-cart-btn" class="add-cart-btn">Add to Cart</button>
+          </div>
+          <div id="stock-warning" class="stock-warning" style="display: none; color: #dc2626; font-size: 14px; margin-top: 8px;"></div>
+        </div>
       </div>
     </div>
 
@@ -59,11 +67,12 @@
     <img id="viewer-img" src="" alt="">
   </div>
 
+  <!-- Single Product Checkout Modal -->
   <div id="checkout-modal" class="modal">
     <div class="card modal-content">
       <div class="modal-header">
-        <h2>Checkout</h2>
-        <button id="close-modal-btn">Close</button>
+        <h2>Quick Checkout</h2>
+        <button id="close-modal-btn">&times;</button>
       </div>
       <form id="checkout-form" class="form">
         <input type="hidden" id="co-product-id">
@@ -92,7 +101,7 @@
         <div class="row">
           <div>
             <label>Delivery</label>
-            <input id="co-delivery" readonly>
+            <input id="co-delivery" readonly value="60">
           </div>
           <div>
             <label>Total (tk)</label>
@@ -154,15 +163,70 @@
       </form>
     </div>
   </div>
-<!-- Success Popup -->
-<div id="success-popup" class="success-popup">
-  <div class="success-content">
-    <h2>Your Order Has Been Placed!</h2>
-    <p>Thank you for your patronage ❤️</p>
-    <button id="success-ok-btn" style="padding: 12px 30px; font-size: 18px; background: #22c55e; color: white; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s;">OK</button>
+
+  <!-- Cart Slider Panel -->
+  <div id="cart-panel" class="cart-panel">
+    <div class="cart-header">
+      <h2>Cart</h2>
+      <button id="close-cart">&times;</button>
+    </div>
+    <div id="cart-items" class="cart-items"></div>
+    <div class="cart-footer">
+      <div><strong>Total: ৳<span id="cart-total">0</span></strong></div>
+      <button id="checkout-btn" class="checkout-cart-btn">Checkout</button>
+    </div>
   </div>
-</div>
-</div>
+  <div id="cart-overlay" class="overlay"></div>
+
+  <!-- Multi Product Checkout Modal -->
+  <div id="multi-checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Cart Checkout</h2>
+        <button id="close-multi-modal-btn">&times;</button>
+      </div>
+      <form id="multi-checkout-form" class="form">
+        <div id="co-products-list" style="margin-bottom: 16px;"></div>
+        <div class="row">
+          <div><label>Delivery Fee (tk)</label><input id="co-delivery-multi" readonly value="60"></div>
+          <div><label>Total (tk)</label><input id="co-total-multi" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="co-name-multi" required></div>
+          <div><label>Phone</label><input id="co-phone-multi" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="co-address-multi" required></textarea></div>
+        <div class="row">
+          <div>
+            <label>Payment Method</label>
+            <select id="co-payment-multi" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div><label>Pay to</label><input id="co-payment-number-multi" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Pay Now (tk)</label><input id="co-pay-now-multi" readonly></div>
+          <div><label>Due (tk)</label><input id="co-due-amount-multi" readonly></div>
+        </div>
+        <div><label>Transaction ID (if prepaid)</label><input id="co-txn-multi"></div>
+        <div><label><input type="checkbox" id="co-policy-multi" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <button type="submit">Place Order</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Success Popup -->
+  <div id="success-popup" class="success-popup">
+    <div class="success-content">
+      <h2>✅ Order Placed!</h2>
+      <p>Thank you for shopping with The Geek Shop</p>
+      <button id="close-success">OK</button>
+    </div>
+  </div>
+
   <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
     <div>
       <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
@@ -178,6 +242,4 @@
     <p>&copy; All rights reserved by The Geek Shop</p>
   </footer>
 </body>
-
 </html>
-
