--- a/products.html
+++ b/products.html
@@ -12,23 +12,6 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '655776497078930');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
 </head>
 <body>
   <header class="site-header">
@@ -39,6 +22,7 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
+        <a id="cart-link" href="#">Cart (<span id="cart-count">0</span>)</a>
         <a href="admin.html">Admin</a>
       </div>
     </nav>
@@ -46,13 +30,65 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
 
  <main class="container">
     <h1 id="products-title">Products</h1>
-    
     <div id="product-list" class="product-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
     <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
+  </div>
+
+  <!-- Cart Slider & Multi Checkout (same as index.html) -->
+  <div id="cart-panel" class="cart-panel">
+    <div class="cart-header">
+      <h2>Cart</h2>
+      <button id="close-cart">&times;</button>
+    </div>
+    <div id="cart-items" class="cart-items"></div>
+    <div class="cart-footer">
+      <div><strong>Total: ৳<span id="cart-total">0</span></strong></div>
+      <button id="checkout-btn" class="checkout-cart-btn">Checkout</button>
+    </div>
+  </div>
+  <div id="cart-overlay" class="overlay"></div>
+
+  <div id="multi-checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Checkout</h2>
+        <button id="close-multi-modal-btn">&times;</button>
+      </div>
+      <form id="multi-checkout-form" class="form">
+        <div id="co-products-list" style="margin-bottom: 16px;"></div>
+        <div class="row">
+          <div><label>Delivery Fee (tk)</label><input id="co-delivery" readonly value="60"></div>
+          <div><label>Total (tk)</label><input id="co-total" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="co-name" required></div>
+          <div><label>Phone</label><input id="co-phone" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="co-address" required></textarea></div>
+        <div class="row">
+          <div>
+            <label>Payment Method</label>
+            <select id="co-payment" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
+          <div><label>Due (tk)</label><input id="co-due-amount" readonly></div>
+        </div>
+        <div><label>Transaction ID (if prepaid)</label><input id="co-txn"></div>
+        <div><label><input type="checkbox" id="co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <button type="submit">Place Order</button>
+      </form>
+    </div>
   </div>
 
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
@@ -63,13 +99,11 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
     <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
-        <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
     </a>
   </div>
- 
   <p>&copy; All rights reserved by The Geek Shop</p>
 </footer>
 </body>
-
 </html>
